--- a/scss/rcss_fontsize_01.scss
+++ b/scss/rcss_fontsize_01.scss
@@ -695,6 +695,21 @@ body {
                                             }
                                         }
                                     }
+                                    .categoriaopen {
+                                        .cont_fondo {
+                                            .nombre {}
+                                            .descripcion{}
+                                            .listado {
+                                                .prod_item {
+                                                    .prod_i_nom {
+                                                        .prod_i_ttl{}
+                                                        .prod_i_sttl{}
+                                                    }
+                                                    .prod_i_pre{}
+                                                }
+                                            }
+                                        }
+                                    }
                                 }
                             }
                         }
