--- a/css/rcss_colores_01.css
+++ b/css/rcss_colores_01.css
@@ -150,6 +150,12 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
   background: #900;
   color: #fff;
 }
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen {
+  background: #ddd;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen .cont_fondo .listado .prod_item {
+  border-bottom-color: #ccc;
+}
 /* MODALS PASO CARTA PENDIENTE */
 
 /*# sourceMappingURL=rcss_colores_01.css.map */
