--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -577,6 +577,29 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
   width: 94%;
   left: 3%;
 }
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen {
+  margin-bottom: 5px;
+  background-size: cover;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen .cont_fondo {
+  padding: 20px 10px 10px 10px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen .cont_fondo .listado {
+  padding: 20px 0px 0px 0px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen .cont_fondo .listado .prod_item {
+  padding: 0px 0px 5px 0px;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen .cont_fondo .listado .prod_item .prod_i_nom {
+  width: calc(100% - 70px);
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen .cont_fondo .listado .prod_item .prod_i_pre {
+  width: 70px;
+  right: 0px;
+  text-align: right;
+}
 /* MODALS PASO CARTA PENDIENTE */
 
 /*# sourceMappingURL=rcss_tipo_01.css.map */
