--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -582,10 +582,10 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
   background-size: cover;
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen .cont_fondo {
-  padding: 20px 10px 10px 10px;
+  padding: 20px 3% 15px 3%;
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen .cont_fondo .listado {
-  padding: 20px 0px 0px 0px;
+  padding: 15px 0px 0px 0px;
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen .cont_fondo .listado .prod_item {
   padding: 0px 0px 5px 0px;
