--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -921,11 +921,11 @@ body {
                                         margin-bottom: 5px;
                                         background-size: cover;
                                         .cont_fondo {
-                                            padding: 20px 10px 10px 10px;
+                                            padding: 20px 3% 15px 3%;
                                             .nombre {}
                                             .descripcion{}
                                             .listado {
-                                                padding: 20px 0px 0px 0px;
+                                                padding: 15px 0px 0px 0px;
                                                 .prod_item {
                                                     padding: 0px 0px 5px 0px;
                                                     border-bottom-style: solid;
