--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -578,6 +578,9 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
   width: 94%;
   left: 3%;
 }
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoria .cont_fondo .cont_fondoi .descripcion {
+  line-height: 12px;
+}
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen {
   margin-bottom: 5px;
   background-size: cover;
@@ -595,6 +598,9 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen .cont_fondo .listado .prod_item .prod_i_nom {
   width: calc(100% - 70px);
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen .cont_fondo .listado .prod_item .prod_i_nom .prod_i_sttl {
+  line-height: 12px;
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen .cont_fondo .listado .prod_item .prod_i_pre {
   width: 70px;
