--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -234,7 +234,7 @@ body .contenedor .modals .cont_modals .paso_02a .cont_modal .cont_info .info_mod
 /* MODALS PASO 02A LOCALES CARRO */
 /* MODALS PASO 02B LOCALES CARRO */
 body .contenedor .modals .cont_modals .paso_02b .cont_modal .cont_info .info_modal {
-  height: calc(100% - $modal_titulo_height);
+  height: calc(100% - 80px);
 }
 body .contenedor .modals .cont_modals .paso_02b .cont_modal .cont_info .info_modal .cont_direccion {
   height: 100%;
