--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -245,7 +245,7 @@ body .contenedor .modals .cont_modals .paso_02b .cont_modal .cont_info .info_mod
 body .contenedor .modals .cont_modals .paso_02b .cont_modal .cont_info .info_modal .cont_direccion .direccion_op2 #map_direccion {
   height: 100%;
 }
-body .contenedor .modals .cont_modals .paso_02b .cont_modal .cont_info .info_modal .cont_direccion .direccion_op2 #map_direccion input {
+body .contenedor .modals .cont_modals .paso_02b .cont_modal .cont_info .info_modal .cont_direccion .direccion_op2 #pac-input {
   width: 97%;
   margin: 1%;
   height: 40px;
