--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -406,13 +406,13 @@ body {
                                     height: 100%;
                                     .direccion_op2 {
                                         height: 100%;
-                                        #map_direccion{
+                                        #map_direccion {
                                             height: 100%;
-                                            input {
-                                                width: 97%;
-                                                margin: 1%;
-                                                height: 40px;
-                                            }
+                                        }
+                                        #pac-input {
+                                            width: 97%;
+                                            margin: 1%;
+                                            height: 40px;
                                         }
                                     }
                                 }
