--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -518,10 +518,12 @@ body {
                                     }
                                     .block_nombre_telefono {
                                         .item_nombre {
+                                            float: left;
                                             h1{}
                                             input{}
                                         }
                                         .item_telefono {
+                                            float: left;
                                             h1{}
                                             input{}
                                         }
