--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -465,7 +465,7 @@ body {
                                         .item_depto {
                                             width: 25%;
                                             h1{}
-                                            input{ height: 30px; border: 0px }
+                                            input{ height: 30px; border: 0px; width: 100% }
                                         }
                                     }
                                     .block_nombre_telefono {
@@ -473,12 +473,12 @@ body {
                                         .item_nombre {
                                             width: 50%;
                                             h1{}
-                                            input{ height: 30px; border: 0px }
+                                            input{ height: 30px; border: 0px; width: 100% }
                                         }
                                         .item_telefono {
                                             width: 50%;
                                             h1{}
-                                            input{ height: 30px; border: 0px }
+                                            input{ height: 30px; border: 0px; width: 100% }
                                         }
                                     }
                                     .block_preguntas {
