--- a/css/rcss_colores_01.css
+++ b/css/rcss_colores_01.css
@@ -55,6 +55,9 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones {
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_promo {
   background: #f5f5f5;
 }
+body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes {
+  background: #f5f5f5;
+}
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item {
   border-top-color: #ddd;
 }
