--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -150,13 +150,13 @@ body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal 
   font-size: 25px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes {
-  padding: 6px;
+  padding: 20px 6px 10px 6px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item {
   margin-bottom: 6px;
   padding: 5px 0px;
   border-top-style: solid;
-  border-top-width: 1px;
+  border-top-width: 0px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_nombre {
   width: calc(100% - 120px);
