--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -158,25 +158,27 @@ body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal 
   border-top-width: 0px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_nombre {
-  width: calc(100% - 119px);
+  width: calc(100% - 120px);
   padding-left: 4px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones {
-  width: 115px;
+  width: 116px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .precio {
-  width: 65px;
+  width: 69px;
   text-align: right;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .espacio {
-  width: 25px;
+  width: 23px;
   height: 20px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .pregunta {
-  width: 25px;
+  width: 23px;
+  text-align: center;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .accion {
-  width: 25px;
+  width: 23px;
+  text-align: center;
 }
 /* MODALS PASO 01 CARRO */
 /* MODALS PASO 02 CARRO */
