--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -259,7 +259,7 @@ body .contenedor .modals .cont_modals .paso_02b .cont_modal .acciones {
 /* MODALS PASO 02B LOCALES CARRO */
 /* MODALS PASO 3 DATA */
 body .contenedor .modals .cont_modals .paso_03 .cont_modal .cont_info .info_modal .cont_final {
-  padding: 10px;
+  padding: 15px;
 }
 body .contenedor .modals .cont_modals .paso_03 .cont_modal .cont_info .info_modal .cont_final .block_direccion {
   margin-bottom: 10px;
@@ -308,9 +308,11 @@ body .contenedor .modals .cont_modals .paso_03 .cont_modal .cont_info .info_moda
 body .contenedor .modals .cont_modals .paso_03 .cont_modal .cont_info .info_modal .cont_final .block_preguntas {
   margin-bottom: 10px;
 }
+body .contenedor .modals .cont_modals .paso_03 .cont_modal .cont_info .info_modal .cont_final .block_preguntas h1 {
+  padding-bottom: 4px;
+}
 body .contenedor .modals .cont_modals .paso_03 .cont_modal .cont_info .info_modal .cont_final .block_preguntas .preguntas {
   padding: 10px;
-  margin-top: 4px;
 }
 body .contenedor .modals .cont_modals .paso_03 .cont_modal .cont_info .info_modal .cont_final .block_preguntas .preguntas .pregunta .pre_nom {
   width: 90%;
@@ -323,7 +325,7 @@ body .contenedor .modals .cont_modals .paso_03 .cont_modal .cont_info .info_moda
   height: 18px;
   margin-top: 2px;
 }
-body .contenedor .modals .cont_modals .paso_03 .cont_modal .cont_info .info_modal .cont_final .block_preguntas .preguntas .pregunta textarea {
+body .contenedor .modals .cont_modals .paso_03 .cont_modal .cont_info .info_modal .cont_final .block_preguntas .preguntas textarea {
   width: 100%;
   height: 70px;
   border: 0px;
