--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -449,7 +449,7 @@ body {
                         .cont_info {
                             .info_modal {
                                 .cont_final {
-                                    padding: 10px;
+                                    padding: 15px;
                                     .block_direccion {
                                         margin-bottom: 10px;
                                         .item_direccion {
@@ -485,10 +485,11 @@ body {
                                     }
                                     .block_preguntas {
                                         margin-bottom: 10px;
-                                        h1{}
+                                        h1 {
+                                            padding-bottom: 4px;
+                                        }
                                         .preguntas {
                                             padding: 10px;
-                                            margin-top: 4px;
                                             .pregunta {
                                                 .pre_nom{ 
                                                     width: 90%;
@@ -497,8 +498,8 @@ body {
                                                     width: 10%;
                                                     input{ width: 18px; height: 18px; margin-top: 2px }
                                                 }
-                                                textarea{ width: 100%; height: 70px; border: 0px }
                                             }
+                                            textarea{ width: 100%; height: 70px; border: 0px }
                                         }
                                     }
                                 }
