--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -496,6 +496,7 @@ body {
                                                 }
                                                 .pre_input {
                                                     width: 10%;
+                                                    text-align: right;
                                                     input{ width: 18px; height: 18px; margin-top: 2px }
                                                 }
                                             }
