--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -93,7 +93,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .padding_01 
   padding-bottom: 56px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .padding_02 {
-  padding-bottom: 106px;
+  padding-bottom: 130px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .sub_total {
   bottom: 56px;
@@ -330,6 +330,9 @@ body .contenedor .modals .cont_modals .paso_03 .cont_modal .cont_info .info_moda
   width: 100%;
   height: 70px;
   border: 0px;
+}
+body .contenedor .modals .cont_modals .paso_03 .cont_modal .sub_total {
+  height: 74px;
 }
 /* MODALS PASO 3 DATA */
 /* MODALS PASO 4 LOCALES CARRO */
