--- a/css/rcss_fontsize_01.css
+++ b/css/rcss_fontsize_01.css
@@ -79,5 +79,13 @@ body .contenedor .modals .cont_modals .paso_02b .cont_modal .acciones {
 /* MODALS PASO PROMOCION */
 /* MODALS PASO CARTA */
 /* MODALS PASO CARTA PENDIENTE */
+/* MODALS PAGINA */
+/* MODALS PAGINA */
+/* MODALS ERROR LOCALES */
+/* MODALS ERROR LOCALES */
+/* MODALS ERROR */
+/* MODALS ERROR */
+/* MODALS CONTACTO */
+/* MODALS CONTACTO */
 
 /*# sourceMappingURL=rcss_fontsize_01.css.map */
