--- a/css/rcss_colores_01.css
+++ b/css/rcss_colores_01.css
@@ -153,6 +153,17 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen .cont_fondo .listado .prod_item {
   border-bottom-color: #ccc;
 }
-/* MODALS PASO CARTA PENDIENTE */
+/* MODALS PASO CARTA */
+/* MODALS PAGINA */
+/* MODALS PAGINA */
+/* MODALS ERROR LOCALES */
+body .contenedor .modals .cont_modals .paso_02a .cont_modal .cont_info .info_modal .cont_direccion .direccion_op1 .parent_locales .cont_map {
+  background: #ddd;
+}
+/* MODALS ERROR LOCALES */
+/* MODALS ERROR */
+/* MODALS ERROR */
+/* MODALS CONTACTO */
+/* MODALS CONTACTO */
 
 /*# sourceMappingURL=rcss_colores_01.css.map */
