--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -900,6 +900,167 @@ body {
 /* MODALS PASO CARTA */
 
 
+
+/* MODALS PAGINA */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal_pagina {
+                    .cont_modal {
+                        .close{}
+                        .cont_info{}
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PAGINA */
+
+
+
+/* MODALS ERROR LOCALES */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .paso_02a {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .cont_direccion {
+                                    .direccion_op1 {
+                                        .parent_locales {
+                                            .dir_locales {
+                                                .cont_local {
+                                                    width: 100%;
+                                                    height: 100%;
+                                                    position: relative;
+                                                    .left_acciones {
+                                                        position: absolute;
+                                                        height: 100%;
+                                                        .local_info {
+                                                            .title{}
+                                                            .stitle{}
+                                                            .alert{}
+                                                        }
+                                                    }
+                                                    .accioness {
+                                                        height: 100%;
+                                                        .accion{ 
+                                                            display: block;
+                                                        }
+                                                        .ver_mapa{}
+                                                        .ver_whats{}
+                                                        .ver_tel{}
+                                                    }
+                                                }
+                                            }
+                                            .cont_map {
+                                                .dir_map{ width: 100%; }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        .acciones {
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS ERROR LOCALES */
+
+
+
+/* MODALS ERROR */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal_error {
+                    .cont_modal {
+                        .close{}
+                        .cont_info {
+                            .cont_err {
+                                .cont_ab_err {
+                                    .titulo_error {
+
+                                    }
+                                    .btns_err {
+                                        .btn_err {
+
+                                        }
+                                        .btn_err1 {
+
+                                        }
+                                        .btn_err2 {
+
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS ERROR */
+
+
+
+/* MODALS CONTACTO */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal_contacto {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close{}
+                        .cont_info {
+                            .info_modal {
+                                .cont_final {
+                                    .input_contacto {
+                                        h1{}
+                                        .d_input {
+                                            input{}
+                                        }
+                                    }
+                                    .input_enviar {
+                                        input{}
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS CONTACTO */
+
+
 .prin_alpha_1 {
     background: linear-gradient(90deg, white 0%, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0) 100%);
 }
