--- a/scss/rcss_colores_01.scss
+++ b/scss/rcss_colores_01.scss
@@ -799,4 +799,161 @@ body {
         }
     }
 }
-/* MODALS PASO CARTA PENDIENTE */
+/* MODALS PASO CARTA */
+
+
+
+/* MODALS PAGINA */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal_pagina {
+                    .cont_modal {
+                        .close{}
+                        .cont_info{}
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PAGINA */
+
+
+
+/* MODALS ERROR LOCALES */
+
+$modal_local_map_color: #ddd;
+
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .paso_02a {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .cont_direccion {
+                                    .direccion_op1 {
+                                        .parent_locales {
+                                            .dir_locales {
+                                                .cont_local {
+                                                    .left_acciones {
+                                                        .local_info {
+                                                            .title{}
+                                                            .stitle{}
+                                                            .alert{}
+                                                        }
+                                                    }
+                                                    .accioness {
+                                                        .accion{}
+                                                        .ver_mapa{}
+                                                        .ver_whats{}
+                                                        .ver_tel{}
+                                                    }
+                                                }
+                                            }
+                                            .cont_map {
+                                                background: $modal_local_map_color;
+                                                .dir_map{}
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        .acciones {
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS ERROR LOCALES */
+
+
+
+/* MODALS ERROR */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal_error {
+                    .cont_modal {
+                        .close{}
+                        .cont_info {
+                            .cont_err {
+                                .cont_ab_err {
+                                    .titulo_error {
+
+                                    }
+                                    .btns_err {
+                                        .btn_err {
+
+                                        }
+                                        .btn_err1 {
+
+                                        }
+                                        .btn_err2 {
+
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS ERROR */
+
+
+
+/* MODALS CONTACTO */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal_contacto {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close{}
+                        .cont_info {
+                            .info_modal {
+                                .cont_final {
+                                    .input_contacto {
+                                        h1{}
+                                        .d_input {
+                                            input{}
+                                        }
+                                    }
+                                    .input_enviar {
+                                        input{}
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS CONTACTO */
