--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -982,3 +982,177 @@ body {
     }
 }
 /* MODALS PASO CARTA PENDIENTE */
+
+
+
+/* MODALS PAGINA */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal_pagina {
+                    .cont_modal {
+                        .close{}
+                        .cont_info{}
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PAGINA */
+
+
+
+/* MODALS ERROR LOCALES */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal_error_locales {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .cont_direccion {
+                                    padding: 10px;
+                                    .direccion_op1 {
+                                        .parent_locales {
+                                            padding-bottom: 10px;
+                                            .dir_locales {
+                                                background-size: cover;
+                                                .cont_local {
+                                                    .left_acciones {
+                                                        width: calc(100% - 75px);
+                                                        left: 10px;
+                                                        .local_info {
+                                                            .title{}
+                                                            .stitle{}
+                                                            .alert{}
+                                                        }
+                                                    }
+                                                    .accioness {
+                                                        right: 10px;
+                                                        min-width: 36px;
+                                                        .accion {
+                                                            height: 33.33%;
+                                                            width: 36px;
+                                                            background-repeat: no-repeat;
+                                                            background-size: contain;
+                                                            background-position: center;
+                                                        }
+                                                        .ver_tel {
+                                                            background-image: url('../_images/telefono.png');
+                                                        }
+                                                        .ver_whats {
+                                                            background-image: url('../_images/whatsapp.png');
+                                                        }
+                                                        .ver_mapa {
+                                                            background-image: url('../_images/mapa.png');
+                                                        }
+                                                    }
+                                                }
+                                            }
+                                            .cont_map {
+                                                display: none;
+                                                padding: 6px;
+                                                .dir_map{ height: 160px }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        .acciones {
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS ERROR LOCALES */
+
+
+
+/* MODALS ERROR */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal_error {
+                    .cont_modal {
+                        .close{}
+                        .cont_info {
+                            .cont_err {
+                                .cont_ab_err {
+                                    .titulo_error {
+
+                                    }
+                                    .btns_err {
+                                        .btn_err {
+
+                                        }
+                                        .btn_err1 {
+
+                                        }
+                                        .btn_err2 {
+
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS ERROR */
+
+
+
+/* MODALS CONTACTO */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal_contacto {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close{}
+                        .cont_info {
+                            .info_modal {
+                                .cont_final {
+                                    .input_contacto {
+                                        h1{}
+                                        .d_input {
+                                            input{}
+                                        }
+                                    }
+                                    .input_enviar {
+                                        input{}
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS CONTACTO */
